--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+MVC App/GSC/bin/Debug/netcoreapp2.0/GSC.dll
+MVC App/GSC/bin/Debug/netcoreapp2.0/GSC.pdb
