Migrated From VSC to VS 2017 IDE.
- Included Identity for Authorization.

--- a/Stark/Stark/appsettings.json
+++ b/Stark/Stark/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=PH-WWLT188;Initial Catalog=Stark;User Id=sa;Password=Password1;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
